--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Semantic Network Simulator</title>
+    <title>Симулятори</title>
 </head>
 <body>
-    <h1>Semantic Network Simulator</h1>
-    <nav>
-        <a href="semanticNetworkSimulator.html">🧠 Launch Simulator</a>
-    </nav>
+    <a href="semanticNetworkSimulator.html">Симулятор семантичних мереж</a>
 </body>
 </html>
