--- a/aiHistoryTimeline.html
+++ b/aiHistoryTimeline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Історія Штучного Інтелекту - Timeline (PDF Version)</title>
+    <title>Історія Штучного Інтелекту - Timeline</title>
     <style>
         @page {
             size: A3 landscape;
