--- a/index.html
+++ b/index.html
@@ -353,9 +353,14 @@
             <div class="simulator-card">
                 <div class="status live">Доступно</div>
                 <h3 class="card-title">Симулятор семантичних мереж</h3>
-                <p class="card-description">Будуйте та аналізуйте графи знань. Створюйте концепти, встановлюйте зв'язки та досліджуйте, як семантичні мережі представляють людські знання.</p>
                 <a href="semanticNetworkSimulator.html" class="card-button">Запустити симулятор</a>
             </div>
+                <div class="simulator-card">
+                <div class="status live">Доступно</div>
+                <h3 class="card-title">Симулятор персептрона Розенблатта</h3>
+                <a href="perceptron_simulator.html" class="card-button">Запустити симулятор</a>
+            </div>
+            
         </div>
     </section>
 </body>
