--- a/perceptron_simulator.html
+++ b/perceptron_simulator.html
@@ -38,10 +38,7 @@
             margin-bottom: 30px;
             font-size: 2.5em;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-            background: linear-gradient(45deg, #ff6b6b, #4ecdc4);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: white;
         }
 
         .main-content {
@@ -340,7 +337,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🧠 Симулятор персептрона Розенблатта</h1>
+        <h1>Симулятор персептрона Розенблатта</h1>
         
         <div class="main-content">
             <div class="left-panel panel">
