--- a/index.html
+++ b/index.html
@@ -360,6 +360,12 @@
                 <h3 class="card-title">Симулятор персептрона Розенблатта</h3>
                 <a href="perceptron_simulator.html" class="card-button">Запустити симулятор</a>
             </div>
+            </div>
+                <div class="simulator-card">
+                <div class="status live">Доступно</div>
+                <h3 class="card-title">Симулятор світлофора з нечітким керуванням</h3>
+                <a href="fuzzy_traffic_light.html" class="card-button">Запустити симулятор</a>
+            </div>
             
         </div>
     </section>
