--- a/index.html
+++ b/index.html
@@ -366,7 +366,12 @@
                 <h3 class="card-title">Симулятор світлофора з нечітким керуванням</h3>
                 <a href="fuzzy_traffic_light.html" class="card-button">Запустити симулятор</a>
             </div>
-            
+            </div>
+                <div class="simulator-card">
+                <div class="status live">Доступно</div>
+                <h3 class="card-title">Симулятор експертної системи</h3>
+                <a href="plant_expert_system.html" class="card-button">Запустити симулятор</a>
+            </div>
         </div>
     </section>
 </body>
